--- a/src/app/admin/primary/cost-details/cost-details.component.html
+++ b/src/app/admin/primary/cost-details/cost-details.component.html
@@ -17,12 +17,12 @@
                             <div> <b>{{'common.reservationPrice' | translate}}:</b> {{element.reservationPrice}}</div>
                             <div> <b>{{'common.bedPrice' | translate}}:</b> {{element.bedPrice}}</div>
                             <div> <b>{{'common.transportPrice' | translate}}:</b> {{element.transportPrice}}</div>
-                            <div class="d-flex align-items-center">
+                            <!-- <div class="d-flex align-items-center">
                                 <b>{{'common.needBed' | translate}}:</b>&nbsp;
                                 <ng-container *ngIf="element.needBed; else unCheck">
                                     <i class="fa-solid fa-square-check text-success"></i>
                                 </ng-container>
-                            </div>
+                            </div> -->
                             <div class="d-flex align-items-center">
                                 <b>{{'common.privateTransport' | translate}}:</b>&nbsp;
                                 <ng-container *ngIf="element.privateTransport; else unCheck">
