--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,11 +74,17 @@
               </div>
             </ng-container>
             <div class="alert alert-info">
-              <div>
+              <div class="font-weight-bold">
+                {{'common.notes' | translate}}:
+              </div>
+              <!-- <div>
                 {{'common.childInfo' | translate}}
               </div>
               <div>
                 {{'common.adultInfo' | translate}}
+              </div> -->
+              <div>
+                {{'common.childrenNotes' | translate}}
               </div>
               <!-- <div>
                 {{'common.maximumPersons' | translate}}
