--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -28,10 +28,10 @@
                   <div> <b>{{'common.totalCost' | translate}}:</b>
                     {{element.totalCost}} جنيه
                   </div>
-                  <div> <b>{{'common.paid' | translate}}: &nbsp;</b> {{element.paid}} جنيه</div> 
+                  <div> <b>{{'common.paid' | translate}}: &nbsp;</b> {{element.paid}} جنيه</div>
                   <div>
-                    <b>{{'common.remaining' | translate}}:</b> 
-                    {{ element.totalCost - element.paid }} 
+                    <b>{{'common.remaining' | translate}}:</b>
+                    {{ element.totalCost - element.paid }}
                     جنيه
                   </div>
                   <div class="d-flex">
@@ -67,7 +67,7 @@
                   </a>
                 </div>
               </div>
-    
+
             </td>
             <td mat-footer-cell *matFooterCellDef class="px-0">
               <div class="pr-3 d-flex">
@@ -98,7 +98,7 @@
               </div>
             </td>
           </ng-container>
-    
+
           <ng-container matColumnDef="mobile">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.mobile' | translate}}</th>
             <td mat-cell *matCellDef="let element" class="width-135">
@@ -109,7 +109,7 @@
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
-    
+
           <ng-container matColumnDef="birthDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.birthDate' | translate}}</th>
             <td mat-cell *matCellDef="let element" class="width-135">
@@ -117,7 +117,7 @@
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
-    
+
           <ng-container matColumnDef="gender">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.gender' | translate}}</th>
             <td mat-cell *matCellDef="let element">
@@ -132,13 +132,13 @@
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
-    
+
           <ng-container matColumnDef="address">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'menu.address' | translate}}</th>
             <td mat-cell *matCellDef="let element" class="col-1">{{element.address}}</td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
-    
+
           <ng-container matColumnDef="age">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.age' | translate}}</th>
             <td mat-cell *matCellDef="let element" class="col-1">{{element.age}}</td>
@@ -147,28 +147,38 @@
 
           <ng-container matColumnDef="transportation">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.transportationName' | translate}}</th>
-            <td mat-cell *matCellDef="let element">{{ element.transportationName }}</td>
+            <td mat-cell *matCellDef="let element">
+              {{ element.transportationName }}
+            </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <ng-container matColumnDef="total">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.totalCost' | translate}}</th>
             <td mat-cell *matCellDef="let element">
-              {{element.totalCost}}
+              <ng-container *ngIf="element.isMain; else empty">
+                {{element.totalCost}}
+              </ng-container>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
         <ng-container matColumnDef="paid">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.paid' | translate}}</th>
-            <td mat-cell *matCellDef="let element">{{element.paid}}</td>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="element.isMain; else empty">
+                {{element.paid}}
+              </ng-container>
+            </td>
             <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
 
         <ng-container matColumnDef="remaining">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.remaining' | translate}}</th>
             <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="element.isMain; else empty">
                 {{ element.totalCost - element.paid }}
+              </ng-container>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
@@ -178,11 +188,36 @@
               {{'common.bookingStatus' | translate}}
             </th>
             <td mat-cell *matCellDef="let element" class="col-1">
-              <app-ticket-status [status]="element.bookingStatus"></app-ticket-status>
+              <ng-container *ngIf="element.isMain; else empty">
+                <app-ticket-status [status]="element.bookingStatus"></app-ticket-status>
+              </ng-container>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
-    
+
+          <ng-container matColumnDef="roomType">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.roomType' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="col-1">
+              <ng-container *ngIf="element.roomType; else empty">
+                <ng-container [ngSwitch]="element.roomType">
+                  <div *ngSwitchCase="model.roomType.double">
+                    {{ 'common.double' | translate }}
+                  </div>
+                  <div *ngSwitchCase="model.roomType.triple">
+                    {{ 'common.triple' | translate }}
+                  </div>
+                  <div *ngSwitchCase="model.roomType.quad">
+                    {{ 'common.quad' | translate }}
+                  </div>
+                  <div *ngSwitchDefault>
+                    {{ 'room.single' | translate }}
+                  </div>
+                </ng-container>
+              </ng-container>
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+          </ng-container>
+
           <ng-container matColumnDef="room">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.room' | translate}}</th>
             <td mat-cell *matCellDef="let element" class="col-3">
@@ -221,7 +256,7 @@
     </button>
     <button mat-menu-item class="primary" (click)="openExportModal()">
       <i class="fa-solid fa-download"></i>&nbsp;
-      تصدير الأعضاء 
+      تصدير الأعضاء
     </button>
   </mat-menu>
 </button>
