--- a/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
+++ b/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
@@ -50,7 +50,7 @@
     </mat-form-field>
     <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
       <mat-label>{{'common.birthDate' | translate}}</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="birthDate" [max]="model.maxDate"
+      <input matInput [matDatepicker]="picker" formControlName="birthDate" [max]="model.childMinDate"
         [min]="model.adultMinDate">
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
@@ -121,9 +121,9 @@
               <div class="d-flex justify-content-center align-items-center text-light count mx-2">{{i+1}}</div>
               {{ 'common.individual' | translate}}
             </div>
-            <button type="button" mat-icon-button color="warn" (click)="removeParticipant(i)">
+            <!-- <button type="button" mat-icon-button color="warn" (click)="removeParticipant(i)">
               <mat-icon>delete</mat-icon>
-            </button>
+            </button> -->
           </div>
           <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
             <mat-label>{{'home.arabicFullName' | translate}}</mat-label>
@@ -172,7 +172,7 @@
           </mat-form-field>
           <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
             <mat-label>{{'common.birthDate' | translate}}</mat-label>
-            <input matInput [matDatepicker]="picker" formControlName="birthDate" [max]="model.maxDate"
+            <input matInput [matDatepicker]="picker" formControlName="birthDate" [max]="model.childMinDate"
               [min]="model.adultMinDate">
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
@@ -209,7 +209,7 @@
 
   <ng-container formArrayName="children">
     <ng-container *ngIf="model.children.controls.length > 0">
-      <div *ngFor="let participant of model.children.controls; let i=index" class="rounded col-12 mt-3 pt-3 child-section">
+      <div *ngFor="let child of model.children.controls; let i=index" class="rounded col-12 mt-3 pt-3 child-section">
         <div [formGroupName]="i">
           <div *ngIf="model.form.value.bookingType === model.bookingType.group"
             class="d-flex w-100 align-items-center justify-content-between">
@@ -224,10 +224,10 @@
           <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
             <mat-label>{{'home.arabicFullName' | translate}}</mat-label>
             <input type="text" matInput formControlName="name">
-            <mat-error *ngIf="participant.get('name')!.hasError('required')">
+            <mat-error *ngIf="child.get('name')!.hasError('required')">
               {{'validations.requiredField' | translate}}
             </mat-error>
-            <mat-error *ngIf="participant.get('name')!.hasError('pattern')">
+            <mat-error *ngIf="child.get('name')!.hasError('pattern')">
               {{'validations.arabicLettersOnly' | translate}}
             </mat-error>
           </mat-form-field>
@@ -237,7 +237,7 @@
               [min]="model.childMinDate">
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-            <mat-error *ngIf="participant.get('birthDate')!.hasError('required')">
+            <mat-error *ngIf="child.get('birthDate')!.hasError('required')">
               {{'validations.requiredField' | translate}}
             </mat-error>
           </mat-form-field>
@@ -254,15 +254,15 @@
   </ng-container>
   <ng-container>
     <div *ngIf="model.form.value.bookingType === model.bookingType.group" class="mt-3">
-      <button *ngIf="model.participants.controls.length < (model.form.value.roomType - 1)" type="button" mat-stroked-button color="primary" (click)="addAdult()">
+      <!-- <button *ngIf="model.participants.controls.length < (model.form.value.roomType - 1)" type="button" mat-stroked-button color="primary" (click)="addAdult()">
         {{'common.AddAdult' | translate}}
-      </button>
+      </button> -->
       <button type="button" mat-stroked-button color="primary" (click)="addChild()"
-        class="child-btn">{{'common.addChild' | translate}}
+        class="child-btn">{{'common.addFreeChild' | translate}}
       </button>
     </div>
     <div *ngIf="!canManageReservation" class="col-12 pt-3 px-md-2 px-0 d-flex justify-content-end">
-      <button mat-flat-button type="submit" color="primary" [disabled]="model.isLoading">
+      <button mat-flat-button type="submit" color="primary" [disabled]="model.isLoading || model.participants.controls.length < (model.form.value.roomType - 1)">
         <i *ngIf="model.isLoading" class="fa-solid fa-spinner fa-spin"></i>
         {{'common.addBooking' | translate}}
       </button>
